--- a/Node_ERP_V2/로그인구현.md
+++ b/Node_ERP_V2/로그인구현.md
@@ -9,21 +9,34 @@
   - 통신에서 Session 이라는 개념은 점대점(Point to Point, 클라이언트와 서버간, 서버와 서버간)의 모든 연결 통로를 말한다
   - 로그인 절차에서 말하는 Session 로그인 정보를 web browser 와 서버 간에 유지하는 과정, 데이터 등 이라고 이해해야한다.
 
-  ## Nodejs 에서 Session 을 통한 로그인 구현하기
+  ## 로그인 기능을 애플리케이션에서 구현한 이유
 
-  - express-session 미들웨어 import
+  1.  각 기능별로 로그인 한 사용자와 그렇지 않은 사용자가 접근권한을 분리
+  2.  중요한 기능(예, 추가, 삭제, 업데이트)은 반드시 로그인이 필요하고
+  3.  단순한 기능(조회,검색,읽기)은 로그인을 하지 않아도 사용할 수 있도록
+      구분하는 용도
 
-  ```
-  npm install -save express-session
-  ```
+## 거래처 관리 권한 부여
 
-  - app.js 에 Session Middle Ware 설정
+1. 거래처 리스트 보기 : 일반사용자 : 로그인이 되고, ROLE 이 5 미만인 사용자
+2. 거래처 자세히 보기 : 일반사용자
+3. 거래처 추가, 수정, 삭제 : 관리자 : 로그인이 되고, ROLE 이 3 이하인 사용자
 
-  ```
-  import expressSession from "express-session"
-  ```
+## Nodejs 에서 Session 을 통한 로그인 구현하기
 
-  - const app = express()코드 아래에 다음 코드 추가
+- express-session 미들웨어 import
+
+```
+npm install -save express-session
+```
+
+- app.js 에 Session Middle Ware 설정
+
+```
+import expressSession from "express-session"
+```
+
+- const app = express()코드 아래에 다음 코드 추가
 
 ```
   const sessionOption = {
